# llamafu

./: .gitignore  .pubignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  LICENSE  Makefile  README.md  SUMMARY.md  TODO.md  analysis_options.yaml  build_android.sh  build_ios.sh  pubspec.yaml
.github/workflows/: build-native.yml  test.yml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  README.md  llamafu.cpp  llamafu.h  test_llamafu.cpp
android/src/main/kotlin/com/example/llamafu/: LlamafuPlugin.kt
doc/: ios_build.md  multimodal_implementation.md
docs/: BUILD_SETUP.md  NATIVE_LIBRARIES.md  PROJECT_STRUCTURE.md  TODO.md  android_build.md  api-design-tools.md  api-reference.md  architecture.md  build-guide.md  building.md  constrained_generation_implementation.md  contributing.md  examples.md  getting-started.md  high-level-apis.md  integration-guide.md  lora_implementation.md  model-guide.md  performance-guide.md  tool-calling.md
docs/archive/: ADVANCED_FEATURES_SUMMARY.md  CONSTRAINED_GENERATION_SUMMARY.md  FINAL_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  LLAMA_CPP_API_COVERAGE_REPORT.md  LORA_SUMMARY.md  MULTIMODAL_SUMMARY.md  PUBLISH_READY.md  STATUS_REPORT.md  SUBMODULE_INTEGRATION_SUMMARY.md
documentation/: mkdocs.yml  requirements.txt
documentation/docs/: index.md
documentation/docs/api/: errors.md  inference.md  llamafu.md  multimodal.md  parameters.md  samplers.md
documentation/docs/examples/: chatbot.md  image-analysis.md  streaming.md
documentation/docs/guides/: basic-usage.md  building.md  chat-sessions.md  installation.md  lora-adapters.md  multimodal.md  performance.md  platforms.md  quickstart.md  samplers.md  text-generation.md
example/: pubspec.yaml
example/lib/: main.dart
ios/: llamafu.podspec
ios/Classes/: CMakeLists.txt  LlamafuPlugin.h  LlamafuPlugin.m  llamafu.cpp  llamafu.h  module.modulemap
lib/: llamafu.dart
lib/src/: chat.dart  llamafu_base.dart  llamafu_bindings.dart  lora.dart  multimodal.dart  tool_calling.dart
test/: llamafu_bindings_test.dart  llamafu_comprehensive_test.dart  llamafu_test.dart
test/fixtures/: test_data.dart
test/fixtures/models/: README.md
test/integration/: llamafu_integration_test.dart  llamafu_real_model_test.dart
test/native/: CMakeLists.txt  test_llamafu_native.cpp  test_performance_native.cpp
test/performance/: llamafu_performance_test.dart
test/utils/: test_helpers.dart
tools/: build-android.sh  build-ios.sh  build-local.sh  clean.sh  download-test-models.sh  setup-dev-env.sh  test_runner.dart
